modifiche putAccommodation e putAtecoNew